--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,12 @@
 				<div id="connect" class="window"></div>
 				<div id="settings" class="window" data-type="settings"></div>
 				<div id="help" class="window"></div>
+				<div id="changelog" class="window">
+					<div class="header">
+						<button class="lt" aria-label="Toggle channel list"></button>
+					</div>
+					<div class="container changelog-container">Loading changelog…</div>
+				</div>
 			</div>
 		</div>
 	</div>
